--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Welcome to Alvin's Site</title>
-<style>
-    body {
-        width: 35em;
-        margin: 0 auto;
-        font-family: Tahoma, Verdana, Arial, sans-serif;
-    }
-</style>
-</head>
-<body>
-<h1>Welcome to Alvin's Homepage!</h1>
-<p>If you see this page, the nginx web server is successfully installed and
-working. Further configuration is required.</p>
+    <head>
+        <title>
+            Alvin's Site
+        </title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>    
+    </head>
+    <body>
+    
+    <div class="container">
+        <div class="jumbotron">
+            <h1>My first Bootstrap Site</h1>
+            <p>Drag your window</p>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <h3>第一列
+            </div>
+            <div class="col-sm-4">
+                <h3>第一列
+            </div>
+            <div class="col-sm-4">
+                <h3>第一列
+            </div>
+        </div>
+    </div>
 
-<p>For online documentation and support please refer to
-<a href="http://nginx.org/">nginx.org</a>.<br/>
-Commercial support is available at
-<a href="http://nginx.com/">nginx.com</a>.</p>
 
-<p><em>Thank you for using nginx.</em></p>
-</body>
+    </body>
 </html>
