--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<ul class="social-icons">
 						    <li><a href="#"><i class="twitter"></i></a></li>
 						    <li><a href="#"><i class="dribble"></i></a></li>
-						    <li><a href="#"><i class="behance"></i></a></li>
+						    <li><a href="https://www.facebook.com/alvin.sun.146"><i class="behance"></i></a></li>
 					    </ul>
 					</div>
 					<div class="col-md-4 about-section-grid-2 text-center">
@@ -422,7 +422,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li>
 						<a href="#"><i class="fb"></i></a>
 						<p>Look around you, the world could be much more fascinating than you've ever imagined</p>
-						<a href="#">@Alvin Sun</a>
+						<a href="https://www.facebook.com/alvin.sun.146">@Alvin Sun</a>
 					</li>	
 					<li>
 						<a href="#"><i class="in"></i></a>
