--- a/index.html
+++ b/index.html
@@ -420,9 +420,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<a href="#">@Alvin Sun</a>
 					</li>
 					<li>
-						<a href="#"><i class="fb"></i></a>
+						<a href="https://www.facebook.com/alvin.sun.146"><i class="fb"></i></a>
 						<p>Look around you, the world could be much more fascinating than you've ever imagined</p>
-						<a href="https://www.facebook.com/alvin.sun.146">@Alvin Sun</a>
+						<a href="#">@Alvin Sun</a>
 					</li>	
 					<li>
 						<a href="#"><i class="in"></i></a>
