--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<ul class="details">
 						<li>Age     :     <a href="#">17</a></li>
 						<li>Country     :     <a href="#">China</a></li>
-						<li>Studying in     :     <a href="#">RDFZ</a></li>
+						<li>Studying in     :     <a href="http://www.rdfz.cn">RDFZ</a></li>
 					</ul>
 				</div>
 			</div>
