--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							   </span>
 							</div>
 							<div class="meter">
-								<span style="width:40%;"><div class="progress_desc">Web app</div>
+								<span style="width:40%;"><div class="progress_desc">Web App</div>
 								 <div class="percent">40%</div> 
 								 <div class="clearfix"> </div>
 							    </span>
 							</div>
 						</div>
-						<p>Music & sport</p>
+						<p>Music & Sport</p>
 						<div class="progress-grid">
 				  	       <div class="meter red">
 							   <span style="width:90%;">
@@ -164,7 +164,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							 <ul>
 								<li><a href="#">3D Modeling</a></li>
 								<li><a href="#">Electronic Engineering</a></li>
-								<li><a href="#">Software design</a></li>
+								<li><a href="#">Software Design</a></li>
 							 </ul>
 							 <p>This is an autopilot system based on open source firmware called ArudRover. We acheived auto driving based on GPS locationing and basic obstabcle avoidance.</p>
 						</div>
@@ -265,7 +265,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="portfolio logo1 mix_all  wow bounceIn" data-wow-delay="0.4s" data-cat="logo1" style="display: inline-block; opacity: 1;">
 						<div class="portfolio-wrapper">		
 							<a href="#small-dialog7" class="b-link-stripe b-animate-go  thickbox play-icon popup-with-zoom-anim">
-						     <img src="./images/pic-8.jpg" class="img-responsive" alt="" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 ">Mathmetical Modeling<img src="./images/icon-eye.png" alt=""/></h2>
+						     <img src="./images/pic-8.jpg" class="img-responsive" alt="" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 ">Mathematical Modeling<img src="./images/icon-eye.png" alt=""/></h2>
 						  	</div></a>
 		                </div>
 					</div>	
