--- a/smartphone/index.html
+++ b/smartphone/index.html
@@ -338,7 +338,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div id="small-dialog" class="mfp-hide">
 						<div class="image-top">
 							<img src="./images/pic1.jpg" class="img-responsive" alt="" />
-							<p>This a project based on Arduino Mega 2560 micro controller. We used part of the APM open source firmware and added our own GPS precision improvment algorithim to achieve automatically high speed driving system. </p>
+							<p>This is a project based on Arduino Mega 2560 micro controller. We used part of the APM open source firmware and added our own GPS precision improvment algorithim to achieve automatically high speed driving system. </p>
 						</div>
 					</div>
 					<div id="small-dialog1" class="mfp-hide">
