fix wrong words

--- a/smartphone/index.html
+++ b/smartphone/index.html
@@ -380,7 +380,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div id="small-dialog7" class="mfp-hide">
 						<div class="image-top">
 							<img src="./images/pic8.jpg" class="img-responsive" alt="" />
-							<p>Me and my team took part in Hgih School Mathematical Contest in Modeling and we made a fantastic compter simulation of a road mergance situation. We used cellular automata to achieve our goal.</p>
+							<p>My team and I took part in Hgih School Mathematical Contest in Modeling and we made a fantastic compter simulation of a road mergance situation. We used cellular automata to achieve our goal.</p>
 						</div>
 					</div>
 					<div id="small-dialog8" class="mfp-hide">
