--- a/smartphone/index.html
+++ b/smartphone/index.html
@@ -505,7 +505,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="contact-info">
 				<ul>
 					<li><i class="message"></i></li>
-					<li><a href="#">alvinsunyixiao@gmail.com</a></li>
+					<li>alvinsunyixiao@gmail.com</li>
 					<li><i class="phone"></i></li>
 					<li>+86 185 0103 5804</li>
 				</ul>
