--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 <head>
 <title>Alvin's Homepage</title>
+<link href="images/icon.ico" rel="shortcut icon" />
 <link href="./css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
 <link href="./css/style.css" rel="stylesheet" type="text/css" media="all" />
