--- a/smartphone/index.html
+++ b/smartphone/index.html
@@ -8,6 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 <head>
 <title>Alvin's Homepage</title>
+<link href="images/icon.ico" rel="shortcut icon" />
 <link href="./css/bootstrap.css" rel='stylesheet' type='text/css' />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
