--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<a href="#"><img src="./images/logo.png" alt="" /></a>
 					<h3>HELLO</h3>
 					<h1>my name is <span>Alvin,</span> </h1>
-					<p>A Music Fan.<br>An Extreme Sports Lover.<br>A student from RDFZ.<br>The High School Affiliated to Renmin Univercity. </p>
+					<p>A Music Fan.<br>An Extreme Sports Lover.<br>A student from RDFZ.<br>The High School Affiliated to Renmin University. </p>
 					
 					<ul class="details">
 						<li>Age     :     <a href="##">17</a></li>
