--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<a href="#"><img src="./images/logo.png" alt="" /></a>
 					<h3>HELLO</h3>
 					<h1>my name is <span>Alvin,</span> </h1>
-					<p>A Music Fan.<br>An Extreme Sports Lover.<br>A student from RDFZ.<br>The High School Affiliated to Renmin University. </p>
-
+					<p>A Music Fan.<br>An Extreme Sports Lover.<br>A Multi-Platform Hardware/Software Developer<br>A student from RDFZ.</p>
 					<ul class="details">
 						<li>Age     :     <a href="##">18</a></li>
 						<li>Country     :     <a href="##">China</a></li>
@@ -85,7 +84,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<h4>Who am I?</h4>
 						<p>Hello, my name is Alvin, I'm a high school student from RDFZ</p><br>
 						<p>More than a student, I am also a huge fan of music and extreme sports. Mastery of three different types of instruments as well as free style snowboarding, parkour, etc.</p><br>
-						<p>Even more than that, I am a Smart Device developer. Micro controllers, Quadcopters, Robotics, I just LOVE the feelings of making stuff.</p><br>
+						<p>Even more than that, I am a multi-platform hardware/software developer. Micro controllers, Quadcopters, Robotics, Computer Simulations, I just LOVE the sense of control.</p><br>
 						<ul class="social-icons">
 						    <li><a href="#wechatModal" data-toggle="modal"><i class="twitter"></i></a>
 						    <div class="modal fade" id="wechatModal" tabindex="-1" role="dialog"
@@ -126,7 +125,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					    </ul>
 					</div>
 					<div class="col-md-4 about-section-grid-2 text-center">
-						<img src="./images/man.jpg" class="img-responsive" alt="" />
+						<img src="./images/Alvin.jpg" class="img-responsive" alt="" />
 					</div>
 					<div class="col-md-4 about-section-grid-3">
 						<h4>ALVIN STYLE</h4>
